Kubernetes-deployment/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: node-deployment
  labels:
    app: node-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-pod

  template:
    metadata:
      name: node-pod
      labels:
        app: node-pod

    spec:
      containers:
        - name: blog-node-container
          image: rakgenius/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
