Kubernetes-deployment/mongo-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: mongo-service
  labels:
    app: mongo-service
    
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-pod
