Kubernetes-deployment/nginx-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend-service
    
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: frontend-pod
