Kubernetes-deployment/server-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: node-service
  labels:
    app: node-service
    
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: node-pod
